--- a/app/src/main/res/layout/activity_editar_menu.xml
+++ b/app/src/main/res/layout/activity_editar_menu.xml
@@ -113,6 +113,7 @@
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="Ingrese precio"
+        android:onClick="mensajeEliminar"
         android:radius="12dp"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -147,7 +148,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:background="@drawable/btn_dark_style"
-        android:onClick="eliminar"
+        android:onClick="mensajeEliminar"
         android:text="Delete"
         android:textColor="@drawable/btn_dark_text"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -165,7 +166,6 @@
         android:layout_marginEnd="25dp"
         android:layout_marginStart="5dp"
         android:background="@drawable/btn_dark_style"
-        android:onClick="regresar"
         android:text="Regresar"
         android:textColor="@drawable/btn_dark_text"
         app:layout_constraintBottom_toBottomOf="parent"
