--- a/app/src/main/res/layout/activity_reservacion_vista.xml
+++ b/app/src/main/res/layout/activity_reservacion_vista.xml
@@ -1,103 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#9B9B9B"
+    android:background="@color/Gray"
     tools:context=".ReservacionVista">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="#101010"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+        android:layout_marginBottom="1dp"
+        android:background="@color/Gray"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:layout_constraintBottom_toTopOf="@+id/bbuscar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:layout_width = "28dp"
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:src="@mipmap/rest_up_logo" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/rest_up_logo"/>
-
-
-        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:textStyle="bold"
-            android:text="REST-UP"/>
+            android:text="REST-UP"
+            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/id"
-            android:layout_width="250dp"
-            android:layout_marginLeft="8dp"
-            android:layout_height="48dp"
-            android:background="@drawable/button_run"
-            android:hint="Buscar id" />
-
-        <Button
-            android:id="@+id/bbuscar"
-            android:layout_width="wrap_content"
-            android:textColor="@drawable/btn_dark_text"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:background="@drawable/btn_dark_style"
-            android:onClick="consultarDA"
-            android:text="Buscar" />
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/id"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="20dp"
+        android:autofillHints=""
+        android:background="@drawable/button_run"
+        android:hint="Buscar id"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bbuscar"
+        app:layout_constraintHorizontal_bias="0.099"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.025" />
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center|center_horizontal"
-        android:padding="3dp">
-
-
-        <Button
-            android:id="@+id/bnuevo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:textColor="@drawable/btn_dark_text"
-            android:background="@drawable/btn_dark_style"
-            android:onClick="abrirNue"
-            android:text="Nuevo" />
+    <Button
+        android:id="@+id/bbuscar"
+        android:layout_width="130dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="20dp"
+        android:background="@drawable/btn_dark_style"
+        android:onClick="consultarDA"
+        android:text="Buscar"
+        android:textColor="@drawable/btn_dark_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/id"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.129" />
 
 
-        <Button
-            android:id="@+id/bsalir"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@drawable/btn_dark_text"
-            android:layout_marginLeft="32dp"
-            android:background="@drawable/btn_dark_style"
-            android:text="Salir" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/bnuevo"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
+
+        android:background="@drawable/btn_dark_style"
+        android:onClick="abrirNue"
+        android:text="Nuevo"
+        android:textColor="@drawable/btn_dark_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/bsalir"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/id"
+        app:layout_constraintVertical_bias="0.002" />
+
+
+    <Button
+        android:id="@+id/bsalir"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_dark_style"
+        android:text="Salir"
+        android:textColor="@drawable/btn_dark_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/bnuevo"
+        app:layout_constraintTop_toBottomOf="@+id/bbuscar"
+        app:layout_constraintVertical_bias="0.004" />
 
     <ListView
         android:id="@+id/lvData"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white" />
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="1dp"
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bsalir"
+        app:layout_constraintVertical_bias="0.0" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
