--- a/app/src/main/res/layout/activity_modi_password.xml
+++ b/app/src/main/res/layout/activity_modi_password.xml
@@ -19,7 +19,7 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.104" />
+        app:layout_constraintVertical_bias="0.089" />
 
     <EditText
         android:id="@+id/Pass1"
@@ -55,7 +55,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/Pass1"
-        app:layout_constraintVertical_bias="0.106" />
+        app:layout_constraintVertical_bias="0.053" />
 
     <EditText
         android:id="@+id/PassConf"
@@ -106,5 +106,17 @@
         app:layout_constraintStart_toEndOf="@id/btnCambiar"
         app:layout_constraintTop_toBottomOf="@id/PassConf"
         app:layout_constraintVertical_bias="0.226" />
+
+    <TextView
+        android:id="@+id/txtUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/Pass1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
