--- a/app/src/main/res/layout/activity_reservacion_vista.xml
+++ b/app/src/main/res/layout/activity_reservacion_vista.xml
@@ -8,6 +8,7 @@
     android:background="@color/Gray"
     tools:context=".ReservacionVista">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
@@ -15,10 +16,12 @@
         android:layout_marginBottom="1dp"
         android:background="@color/Gray"
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:layout_constraintBottom_toTopOf="@+id/bbuscar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0">
 
 
         <ImageView
@@ -34,7 +37,6 @@
             android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
-
     <EditText
         android:id="@+id/id"
         android:layout_width="0dp"
@@ -43,7 +45,7 @@
         android:layout_marginStart="20dp"
         android:autofillHints=""
         android:background="@drawable/button_run"
-        android:hint="Buscar id"
+        android:hint="Buscar por id"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/bbuscar"
@@ -65,9 +67,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/id"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.129" />
-
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.023" />
 
     <Button
         android:id="@+id/bnuevo"
@@ -86,7 +87,7 @@
         app:layout_constraintEnd_toStartOf="@+id/bsalir"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id"
-        app:layout_constraintVertical_bias="0.002" />
+        app:layout_constraintVertical_bias="0.02" />
 
 
     <Button
@@ -104,19 +105,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bnuevo"
         app:layout_constraintTop_toBottomOf="@+id/bbuscar"
-        app:layout_constraintVertical_bias="0.004" />
+        app:layout_constraintVertical_bias="0.02" />
 
     <ListView
         android:id="@+id/lvData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="1dp"
         android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bsalir"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.1"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
