--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,7 +9,7 @@
             <item
                 android:id="@+id/registrarCliente"
                 android:icon="@drawable/ic_group"
-                android:title="Registrar">
+                android:title="Cambiar contraseña">
             </item>
             <item
                 android:id="@+id/acerca"
@@ -19,8 +19,7 @@
             <item
                 android:id="@+id/bnsalir"
                 android:icon="@drawable/ic_logout"
-                android:title="Salir">
-            </item>
+                android:title="@string/btnSalir"></item>
         </menu>
 
     </item>
